<resources>
    <string name="app_name">YUTA</string>
    <string name="footer_text">YSTU\'s Unified Tasks App</string>
    <string name="footer_description">Единое приложение ЯГТУ для задач</string>
    <string name="header_text">Добро пожаловать в YUTA!</string>
    <string name="ystu_photo">ystu_photo</string>
    <string name="auth_text">Авторизация</string>
    <string name="separator">separator</string>
    <string name="login">Логин*</string>
    <string name="login_icon">Login</string>
    <string name="password">Пароль*</string>
    <string name="password_icon">password_icon</string>
    <string name="login_button">ВОЙТИ</string>
    <string name="error_message">Неверный логин или пароль</string>
    <string name="loading_text">Проверка данных…</string>
    <string name="nav_profile">Профиль</string>
    <string name="nav_projects">Проекты</string>
    <string name="nav_tasks">Задачи</string>
    <string name="nav_teams">Команды</string>
    <string name="avatar">avatar</string>
    <string name="exit_button">exit</string>
    <string name="reload_button">ОБНОВИТЬ</string>
    <string name="edit_button">СОХРАНИТЬ</string>
    <string name="study_info">study information</string>
    <string name="tasks">Задачи</string>
    <string name="projects">Проекты</string>
    <string name="teams">Команды</string>
    <string name="faculty">Факультет</string>
    <string name="direction">Направление</string>
    <string name="group">Группа</string>
    <string name="network_text">Требуется подключение к Интернету</string>
    <string name="network_down_text">Подключитесь и перезайдите в приложение.</string>
    <string name="reload_text">Обновление информации</string>
    <string name="reload_desc">Чтобы синхронизировать данные личного кабинета на сайте ЯГТУ и данные в YUTA, введите свой пароль:</string>
    <string name="close_button">close</string>
    <string name="edit_text">Редактирование профиля</string>
    <string name="biography">О себе</string>
    <string name="phone_number">Телефон</string>
    <string name="email">E-mail</string>
    <string name="vk">Ссылка на ВК</string>
    <string name="error_phone">Неверный номер телефона</string>
    <string name="error_email">Неверный e-mail</string>
    <string name="error_vk">Неверная ссылка на ВК</string>
    <string name="update_photo_item">Обновить фотографию</string>
    <string name="delete_photo_item">Удалить фотографию</string>
    <string name="edit_miniature_item">Изменить миниатюру</string>
    <string name="delete_button">ДА, УДАЛИТЬ</string>
    <string name="delete_photo_desc">Вы действительно хотите удалить фотографию?</string>
    <string name="delete_team_desc">Вы действительно хотите удалить команду</string>
    <string name="delete_project_desc">Вы действительно хотите удалить проект</string>
    <string name="delete_text">Предупреждение</string>
    <string name="miniature_button">ВЫБРАТЬ МИНИАТЮРУ</string>
    <string name="upload_desc">Друзьям будет проще узнать вас, если вы загрузите свою настоящую фотографию.\nВы можете загрузить изображение в формате JPG, JPEG или PNG.</string>
    <string name="upload_text">Загрузка фотографии</string>
    <string name="pick_button">Выбрать фотографию</string>
    <string name="delete_photo">delete photo</string>
    <string name="pick_image">Выберите изображение</string>
    <string name="pick_tech_task_file">Выберите техническое задание (pdf)</string>
    <string name="crop_text">Выбор миниатюры</string>
    <string name="crop_desc">Выберите область для маленьких фотографий.\nВыбранная миниатюра будет использоваться в профиле.</string>
    <string name="save_button">СОХРАНИТЬ</string>
    <string name="member_button">Вы участник</string>
    <string name="manager_button">Вы руководитель</string>
    <string name="create_team">Создание команды</string>
    <string name="create_project">Создание проекта</string>
    <string name="team_leader">team leader</string>
    <string name="card_phone">card phone</string>
    <string name="previous_cards">previous cards</string>
    <string name="next_cards">next cards</string>
    <string name="yuta_logo">YUTA logo</string>
    <string name="edit_profile_button">обновить пользователя</string>
    <string name="edit_team_button">обновить команду</string>
    <string name="delete_team_button">удалить команду</string>
    <string name="empty_teams_text">Ой, команды не найдены…</string>
    <string name="empty_projects_text">Ой, проекты не найдены…</string>
    <string name="empty_users_text">Ой, пользователи не найдены…</string>
    <string name="error_update_message">Неправильный пароль😔</string>
    <string name="add_team_member">добавить участника</string>
    <string name="remove_team_member">удалить участника</string>
    <string name="create_team_text">Создание команды</string>
    <string name="create_team_desc">Придумайте краткое название команды:</string>
    <string name="create_project_desc">Придумайте краткое название проекта:</string>
    <string name="team_name">Название команды*</string>
    <string name="project_name">Название проекта*</string>
    <string name="add_member_desc">Добавьте участников команды:</string>
    <string name="added_members_desc">Добавленные участники:</string>
    <string name="find_name">ФИО</string>
    <string name="find_team">Наименование команды</string>
    <string name="search_button">ПОИСК</string>
    <string name="error_team_message">Команда с данным названием уже существует!</string>
    <string name="create_button">СОЗДАТЬ</string>
    <string name="edit_team_text">Редактирование команды</string>
    <string name="empty_user_search_message">Таких пользователей нет!</string>
    <string name="empty_team_search_message">Такой команды не существует!</string>
    <string name="logout_button">выйти из профиля</string>
    <string name="tech_task_button">ТЕХНИЧЕСКОЕ ЗАДАНИЕ</string>
    <string name="project_status_header">Статус:</string>
    <string name="project_deadline_header">Сдача проекта:</string>
    <string name="project_desc_header">Описание:</string>
    <string name="team">Команда</string>
    <string name="edit_project_text">Редактирование проекта</string>
    <string name="delete_project">Удалить проект</string>
    <string name="add_team">добавить команду</string>
    <string name="remove_team">исключить команду</string>
    <string name="tech_task">Техническое задание</string>
    <string name="pick_tech_task">Выбрать файлы</string>
    <string name="tech_task_not_picked">Файл не выбран</string>
    <string name="tech_task_desc">Вы можете загрузить файл с техническим заданием в формате PDF.</string>
    <string name="date_input">дд.мм.гггг</string>
    <string name="deadline_header">Дедлайн проекта*</string>
    <string name="project_desc">Краткое описание проекта*</string>
    <string name="create_project_team_mode">Вы можете:</string>
    <string name="create_project_without_team">Создать проект без команды и добавить её позже</string>
    <string name="create_project_with_team">Прикрепить к проекту одну из своих команд</string>
    <string name="added_team_desc">Прикрепленная команда:</string>
    <string name="add_team_desc">Прикрепите команду к проекту:</string>
    <string name="pick_date">выбор даты</string>
    <string name="status_desc">Статус проекта:</string>
    <string name="logout_button_text">ДА, ВЫЙТИ</string>
    <string name="logout_desc">Вы действительно хотите выйти из приложения?</string>
    <string name="downloading">Загрузка</string>
    <string name="tech_task_filename">tech_task.pdf</string>
    <string name="project_menu">меню проекта</string>
    <string name="nav_search">Поиск</string>
    <string name="user_search_text">Поиск пользователей</string>
    <string name="find_user_text">Введите фамилию и имя</string>
    <string name="tech_task_not_exists">НЕТ ТЗ</string>
    <string name="back_press">Нажмите ещё раз, если хотите выйти</string>
</resources>