<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#F7F7F7"
        tools:context=".ui.LoginActivity">

    <RelativeLayout
            android:id="@+id/header"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:background="@color/blue"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/header_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_centerInParent="true"
                android:drawablePadding="25dp"
                android:gravity="center"
                android:text="@string/header_text"
                android:textAppearance="@style/header_text"
                app:drawableStartCompat="@drawable/logo" />
    </RelativeLayout>

    <ImageView
            android:id="@+id/login_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/header"
            app:layout_constraintBottom_toTopOf="@+id/footer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:src="@drawable/login_background"
            android:contentDescription="@string/ystu_photo"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:cropToPadding="true"
            android:scaleType="centerCrop" />

    <RelativeLayout
            android:id="@+id/auth_form"
            android:layout_width="wrap_content"
            android:layout_height="277dp"
            android:layout_centerInParent="true"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/auth_text"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:text="@string/auth_text"
                android:layout_marginTop="10dp"
                android:textAppearance="@style/auth_text"
                android:textAlignment="center"
                android:fontFamily="@font/montserrat_bold"
                android:autoSizeTextType="uniform" />

        <ImageView
                android:id="@+id/separator"
                android:layout_width="100dp"
                android:layout_height="5dp"
                android:src="@drawable/separator"
                android:contentDescription="@string/separator"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:layout_below="@+id/auth_text" />

        <RelativeLayout
                android:id="@+id/login_field"
                android:elevation="10dp"
                android:layout_width="358dp"
                android:layout_height="50dp"
                android:background="@drawable/field_background"
                android:layout_marginTop="17dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/separator">

            <EditText
                    android:id="@+id/login"
                    android:importantForAutofill="no"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/login"
                    android:textAppearance="@style/login"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/login_icon"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:inputType="text|textAutoComplete" />

            <ImageView
                    android:id="@+id/login_icon"
                    android:src="@drawable/login_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/login_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/password_field"
                android:elevation="10dp"
                android:layout_width="358dp"
                android:layout_height="50dp"
                android:background="@drawable/field_background"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                android:layout_below="@+id/login_field">

            <EditText
                    android:id="@+id/password"
                    android:importantForAutofill="no"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:hint="@string/password"
                    android:textAppearance="@style/login"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/password_icon"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="10dp"
                    android:inputType="text|textPassword" />

            <ImageView
                    android:id="@+id/password_icon"
                    android:src="@drawable/password_icon"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:contentDescription="@string/password_icon"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="17dp" />
        </RelativeLayout>

        <Button
                android:id="@+id/login_button"
                android:layout_width="200dp"
                android:layout_height="48dp"
                android:layout_marginTop="25dp"
                android:text="@string/login_button"
                android:textAppearance="@style/login_button"
                android:background="@drawable/login_button"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:elevation="5dp"
                android:layout_below="@+id/password_field"
                android:layout_centerHorizontal="true" />
    </RelativeLayout>

    <TextView
            android:id="@+id/error_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="@style/error_message"
            android:textAlignment="center"
            android:text="@string/error_message"
            android:layout_marginTop="15dp"
            app:layout_constraintTop_toBottomOf="@+id/auth_form"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:visibility="gone" />

    <RelativeLayout
            android:id="@+id/footer"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@color/blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

        <TextView
                android:id="@+id/footer_text"
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_alignParentTop="true"
                android:layout_marginTop="15dp"
                android:text="@string/footer_text"
                android:textAppearance="@style/footer_text"
                android:textAlignment="center" />

        <TextView
                android:id="@+id/footer_description"
                android:layout_width="match_parent"
                android:layout_height="17dp"
                android:text="@string/footer_description"
                android:textAppearance="@style/footer_description"
                android:textAlignment="center"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="40dp" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>