<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog">

    <Button
            android:id="@+id/close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/close_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_close"
            style="@style/orange_button_style"
            tools:ignore="TouchTargetSizeCheck" />

    <TextView
            android:id="@+id/title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/edit_text"
            android:textAppearance="@style/reload_text"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"
            android:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp" />

    <ImageView
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"
            android:contentDescription="@string/separator"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <EditText
            android:id="@+id/biography"
            android:maxLength="200"
            android:inputType="textMultiLine|textAutoComplete|textAutoCorrect"
            android:importantForAutofill="no"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/biography"
            android:textAppearance="@style/login"
            android:layout_centerVertical="true"
            android:background="@drawable/background_edit_field"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:paddingHorizontal="16dp"
            android:gravity="start|top"
            android:paddingVertical="10dp"
            android:focusableInTouchMode="true"
            android:focusable="true" />

    <com.santalu.maskara.widget.MaskEditText
            app:mask="+7 (___) ___-__-__"
            app:maskCharacter="_"
            app:maskStyle="completable"
            android:id="@+id/phone_number"
            android:autofillHints="phone"
            android:inputType="phone"
            android:importantForAutofill="yes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/phone_number"
            android:textAppearance="@style/login"
            android:layout_centerVertical="true"
            android:background="@drawable/background_edit_field"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/biography"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <EditText
            android:id="@+id/email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:importantForAutofill="yes"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/email"
            android:textAppearance="@style/login"
            android:layout_centerVertical="true"
            android:background="@drawable/background_edit_field"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_phone"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:maxLength="50"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <EditText
            android:id="@+id/vk"
            android:inputType="text"
            android:importantForAutofill="no"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="18dp"
            android:layout_marginStart="18dp"
            android:layout_marginEnd="18dp"
            android:hint="@string/vk"
            android:textAppearance="@style/login"
            android:layout_centerVertical="true"
            android:background="@drawable/background_edit_field"
            android:layout_alignParentEnd="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/error_email"
            android:paddingHorizontal="16dp"
            android:paddingVertical="10dp"
            android:maxLength="50"
            android:focusable="true"
            android:focusableInTouchMode="true" />

    <Button
            android:id="@+id/submit"
            style="@style/orange_button"
            android:text="@string/edit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="22dp"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintTop_toBottomOf="@id/vk"
            android:layout_marginTop="30dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            app:layout_constraintVertical_bias="1.0" />

    <TextView
            android:id="@+id/error_phone"
            android:text="@string/error_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/error_field_message"
            android:textAlignment="textStart"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/phone_number"
            app:layout_constraintStart_toStartOf="@id/phone_number"
            app:layout_constraintEnd_toEndOf="@id/phone_number"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    <TextView
            android:id="@+id/error_email"
            android:text="@string/error_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/error_field_message"
            android:textAlignment="textStart"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/email"
            app:layout_constraintStart_toStartOf="@id/email"
            app:layout_constraintEnd_toEndOf="@id/email"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

    <TextView
            android:id="@+id/error_vk"
            android:text="@string/error_vk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textAppearance="@style/error_field_message"
            android:textAlignment="textStart"
            android:layout_marginTop="2dp"
            app:layout_constraintTop_toBottomOf="@id/vk"
            app:layout_constraintStart_toStartOf="@id/vk"
            app:layout_constraintEnd_toEndOf="@id/vk"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/submit"
            android:layout_marginBottom="12dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />


</androidx.constraintlayout.widget.ConstraintLayout>