<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/background_dialog">

    <Button
            android:id="@+id/close"
            android:layout_width="28dp"
            android:layout_height="28dp"
            android:contentDescription="@string/close_button"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"
            android:background="@drawable/ic_close"
            style="@style/orange_button_style"
            tools:ignore="TouchTargetSizeCheck" />

    <TextView
            android:id="@+id/crop_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crop_text"
            android:textAppearance="@style/reload_text"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_semibold"
            android:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@id/close"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="5dp" />

    <TextView
            android:id="@+id/crop_desc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/crop_desc"
            android:textAppearance="@style/dialog_desc"
            android:textAlignment="center"
            android:fontFamily="@font/montserrat_medium"
            android:autoSizeTextType="uniform"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/separator"
            android:layout_marginTop="20dp"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp" />

    <ImageView
            android:id="@+id/separator"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:src="@drawable/separator"
            android:contentDescription="@string/separator"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/crop_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    <com.canhub.cropper.CropImageView
            android:id="@+id/cropImageView"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerInParent="true"
            android:clickable="true"
            android:background="@drawable/photo_filler"
            android:scaleType="fitCenter"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:contentDescription="@string/avatar"
            android:layout_marginStart="22dp"
            android:layout_marginEnd="22dp"
            app:layout_constraintTop_toBottomOf="@id/crop_desc"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            app:layout_constraintBottom_toTopOf="@id/save_miniature"
            android:layout_marginBottom="20dp"
            app:cropGuidelinesThickness="1dp"
            app:cropGuidelinesColor="#804A4A4A"
            app:cropAspectRatioX="1"
            app:cropAspectRatioY="1"
            app:cropGuidelines="on"
            app:cropBorderLineColor="#B316389D"
            app:cropBorderCornerColor="#B316389D" />

    <Button
            android:id="@+id/save_miniature"
            style="@style/orange_button"
            android:text="@string/save_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="22dp"
            tools:ignore="TouchTargetSizeCheck"
            app:layout_constraintTop_toBottomOf="@id/crop_desc"
            android:layout_marginTop="390dp" />

</androidx.constraintlayout.widget.ConstraintLayout>